tests/errors/4_type_errors/boolop-test21.ifj.java
class Main {
    static void run() {
        int a = 5;
        if(a) { // using integer as a logical operator

        }
        
    }
}